Minor UI bugs (Deleted View_Game, About_Game added borders, FAQ fixed alignment, Login/Register aligned the video)

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,5 +1,5 @@
-@import './base.css';
-@import './responsive.css';
+@import "./base.css";
+@import "./responsive.css";
 
 /* #app {
   max-width: 1280px;
@@ -37,93 +37,93 @@ a,
 
 /* Get more fonts here */
 /* https://fonts.google.com/?preview.text=Reventé&preview.text_type=custom */
-@import url('https://fonts.googleapis.com/css?family=Aoboshi+One');
-@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+@import url("https://fonts.googleapis.com/css?family=Aoboshi+One");
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 
 .Aoboshi-One {
-	font-family: 'Aoboshi One';
+    font-family: "Aoboshi One";
 }
 
 .Indie-Flower {
-	font-family: 'Indie Flower';
+    font-family: "Indie Flower";
 }
 
 .pointing {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 /* Side Menu Bar */
 .btn-toggle {
-	padding: 0.25rem 0.5rem;
-	font-weight: 600;
-	color: var(--bs-emphasis-color);
-	background-color: transparent;
+    padding: 0.25rem 0.5rem;
+    font-weight: 600;
+    color: var(--bs-emphasis-color);
+    background-color: transparent;
 }
 .btn-toggle:hover,
 .btn-toggle:focus {
-	color: rgba(var(--bs-emphasis-color-rgb), 0.85);
+    color: rgba(var(--bs-emphasis-color-rgb), 0.85);
 }
 
 .btn-toggle::before {
-	width: 1.25em;
-	line-height: 0;
-	content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-	transition: transform 0.35s ease;
-	transform-origin: 0.5em 50%;
+    width: 1.25em;
+    line-height: 0;
+    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+    transition: transform 0.35s ease;
+    transform-origin: 0.5em 50%;
 }
 
-.btn-toggle[aria-expanded='true'] {
-	color: rgba(var(--bs-emphasis-color-rgb), 0.85);
+.btn-toggle[aria-expanded="true"] {
+    color: rgba(var(--bs-emphasis-color-rgb), 0.85);
 }
 
-.btn-toggle[aria-expanded='true']::before {
-	transform: rotate(90deg);
+.btn-toggle[aria-expanded="true"]::before {
+    transform: rotate(90deg);
 }
 
 .btn-toggle-nav a {
-	padding: 0.1875rem 0.5rem;
-	margin-top: 0.125rem;
-	margin-left: 1.25rem;
+    padding: 0.1875rem 0.5rem;
+    margin-top: 0.125rem;
+    margin-left: 1.25rem;
 }
 .btn-toggle-nav a:hover,
 .btn-toggle-nav a:focus {
-	background-color: var(--bs-tertiary-bg);
+    background-color: var(--bs-tertiary-bg);
 }
 
 .price-form {
-	height: 100%;
-	width: 100%;
-	border-radius: 5px;
-	border: 1px solid grey;
-	padding: 1px 8px;
-	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-	-moz-box-sizing: border-box; /* Firefox, other Gecko */
-	box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid grey;
+    padding: 1px 8px;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+    box-sizing: border-box;
 }
 
 .dash {
-	line-height: 1.9;
+    line-height: 1.9;
 }
 
 .price-btn {
-	background-color: white;
-	height: 100%;
-	border-radius: 5px;
-	border: 1px solid grey;
+    background-color: white;
+    height: 100%;
+    border-radius: 5px;
+    border: 1px solid grey;
 }
 
 .price-btn:hover {
-	color: white;
-	background-color: grey;
-	border: 1px solid white;
+    color: white;
+    background-color: grey;
+    border: 1px solid white;
 }
 
 /* User Highlight */
 ::selection {
-	background: #f3dfd7;
+    background: #f3dfd7;
 }
 
 /* Transition Effect */
 * {
-	transition-duration: 0.2s;
+    transition-duration: 0.2s;
 }
